# music_jmh

./: .gitignore  PyTunes.py  README.md  im2tunes.py  tester.ipynb
PyMusic/: PyTunes.py  README.md  tunes2im.py
RustMusic/: Cargo.toml
juicy/: Cargo.toml
juicy/src/: main.rs
rust_music/: Cargo.toml  README.md
rust_music/musiclib/: Cargo.toml
rust_music/musiclib/src/: lib.rs
rust_music/src/: main.rs  musiclib.rs
rusty_synth/: Cargo.toml
rusty_synth/src/: main.rs
