[package]
name = "rust_music"
version = "0.1.0"
authors = ["James <james@evascend.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musiclib = {path = "/home/james/projects/music/rust_music/musiclib"}
portaudio = "0.7.0"
periodicsynth = "0.1.6"
